tests/errors/syntax_errors/multiple_inheritance.py
class A: pass
class B: pass
class C(A, B): pass

